--- a/main.html
+++ b/main.html
@@ -124,8 +124,25 @@
   </div>
   <div class="footer center__screen">
     <hr class="footer__hr">
-
+    <div class="footer__nav  center__screen">
+      <div class="footer__menu">
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Услуги</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="footer__icons">
+        <a href="#" ><img src="img/fcb.png" alt="" class="footer__icon"></a>
+        <a href="#" ><img src="img/twt.png" alt="" class="footer__icon"></a>
+      </div>
+    </div>
+    <div class="footer__copyright">
+      © 2018 re-mote, all rights reserved
+    </div>
   </div>
+
   
   <!-- SCRIPTS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
