adaptive design, try to fix slick(plugin)

--- a/main.html
+++ b/main.html
@@ -24,17 +24,19 @@
 </head>
 
 <body>
-  <div class="header center__screen">
+  <div class="header center__screen container">
     <div class="logo header__margin"></div>
     <div class="button btn_login header__margin">Button</div>
   </div>
-  <div class="front center__screen">
+
+  <div class="front center__screen container">
     <div class="front__title center__screen">Тестовое задание</div>
     <div class="front__text center__screen">
       На его примере мы хотим продемонстрировать наш подход к организации разработки,<br>а также познакомиться с вашими
       методами вёрстки популярных элементов веб-сайтов</div>
   </div>
-  <div class="cards center__screen">
+
+  <div class="cards center__screen container">
     <div class="cards__card">
       <div class="cards__card_img"></div>
       <div class="cards__card_title">Sed ut perspiciatis </div>
@@ -81,29 +83,31 @@
       <div class="cards__card_date">01.01.2018</div>
     </div>
   </div>
-  <div class="galery center__screen">
+
+  <div class="galery center__screen container">
     <div class="galery__title">Галерея</div>
     <div class="galery__row ">
-      <p class="imglist " style="max-width: 1366px;">
-        <div class="multiple-items">
-          <a href="img/picture.png" data-fancybox="gallery">
+      <p class="imglist" style="max-width: 1366px;">
+        <div id="slider" class="  multiple-items ">
+            <!-- single-item -->
+         <div> <a href="img/picture.png" data-fancybox="gallery">
             <img src="img/picture.png" style="width:425px; height: 200px;" />
-          </a>
+          </a></div>
 
 
-          <a href="img/picture.png" data-fancybox="gallery">
+          <div> <a href="img/picture.png" data-fancybox="gallery">
             <img src="img/picture.png" style="width:425px; height: 200px;" />
-          </a>
+          </a></div>
 
 
-          <a href="img/picture.png" data-fancybox="gallery">
+          <div> <a href="img/picture.png" data-fancybox="gallery">
             <img src="img/picture.png" style="width:425px; height: 200px;" />
-          </a>
+          </a></div>
 
 
-          <a href="img/picture.png" data-fancybox="gallery">
+          <div> <a href="img/picture.png" data-fancybox="gallery">
             <img src="img/picture.png" style="width:425px; height: 200px;" />
-          </a>
+          </a></div>
         </div>
 
       </p>
@@ -111,7 +115,7 @@
 
 
   </div>
-  <div class="form center__screen">
+  <div class="form center__screen container">
     <div class="title">Форма</div> 
     <form action="">
       <input type="text" name="" id="" class="form__input">
@@ -122,7 +126,7 @@
     </form>
    
   </div>
-  <div class="footer center__screen">
+  <div class="footer center__screen container">
     <hr class="footer__hr">
     <div class="footer__nav  center__screen">
       <div class="footer__menu">
